# mathlibraJ

./: .gitignore  LICENSE  README.md  build.gradle
cpp/: .ycm_extra_conf.py  CMakeLists.txt  Mathlibra.cpp  NativeComponents.cpp  NativeComponents.h  NativeType.cpp  mathlibra_Mathlibra.h  mathlibra_NativeType.h  net_rahmn_mathlibra_Mathlibra.h  net_rahmn_mathlibra_NativeType.h
gradle/wrapper/: gradle-wrapper.properties
java/src/: TestMathlibra.java
java/src/mathlibra/: FunctionData.java  Mathlibra.java  MathlibraCriticalException.java  MathlibraException.java  NativeType.java
java/src/net/rahmn/mathlibra/: FunctionData.java  Mathlibra.java  MathlibraCriticalException.java  MathlibraException.java  NativeType.java
mathlibra_include/: type.h  type_interface.h
